--- a/package.json
+++ b/package.json
@@ -18,5 +18,23 @@
   "bugs": {
     "url": "https://github.com/joseppala/conversational-ui/issues"
   },
-  "homepage": "https://github.com/joseppala/conversational-ui#readme"
+  "homepage": "https://github.com/joseppala/conversational-ui#readme",
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^2.0.2",
+    "core-js": "^3.0.1",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
+  }
 }
